--- a/trackfit_app/pubspec.yaml
+++ b/trackfit_app/pubspec.yaml
@@ -30,10 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  js: ^0.6.3  # This is for using JavaScript interop in Flutter.
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
