--- a/trackfit_app/pubspec.yaml
+++ b/trackfit_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   js: ^0.6.3  # This is for using JavaScript interop in Flutter.
   cupertino_icons: ^1.0.8
+  video_player: ^2.4.5
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +50,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+    - assets/videos/videoplayback.mp4
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
