--- a/trackfit_app/pubspec.yaml
+++ b/trackfit_app/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   js: ^0.6.3  # This is for using JavaScript interop in Flutter.
   cupertino_icons: ^1.0.8
   video_player: ^2.4.5
+  camera: ^0.9.4+18
+  path_provider: ^2.0.9
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
