--- a/trackfit_app/pubspec.yaml
+++ b/trackfit_app/pubspec.yaml
@@ -30,12 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  js: ^0.6.3  # This is for using JavaScript interop in Flutter.
+  js: ^0.7.1
   cupertino_icons: ^1.0.8
-  video_player: ^2.4.5
-  camera: ^0.9.4+18
-  path_provider: ^2.0.9
-  path: ^1.8.0
+  video_player: ^2.7.13
+  camera: ^0.11.0+2
+  path_provider: ^2.0.15
+  path: ^1.9.0  # Match the version required by flutter_test
+
+
+
 
 dev_dependencies:
   flutter_test:
