--- a/trackfit_app/pubspec.yaml
+++ b/trackfit_app/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  fl_chart:
+    git:
+      url: https://github.com/imaNNeoFighT/fl_chart.git
   flutter:
     sdk: flutter
   js: ^0.7.1
