--- a/trackfit_app/pubspec.yaml
+++ b/trackfit_app/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
       url: https://github.com/imaNNeoFighT/fl_chart.git
   flutter:
     sdk: flutter
+  animated_text_kit: ^4.2.1
+  font_awesome_flutter: ^10.0.0
+  mesh_gradient: ^1.0.0
   js: ^0.7.1
   cupertino_icons: ^1.0.8
   video_player: ^2.7.13
